--- a/index.css
+++ b/index.css
@@ -1,45 +1,70 @@
 
-.container{
-    background-color: cadetblue;
-
-}
-
-#image{
-    background-color:aqua;
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction:column;
-    padding:4px;
-}
-
-img{
-    height:300px;
-    width:200px;
-    margin: 10px;
-    margin-top: 10px;
-    margin-bottom:10px;
-    margin-left:30px ;
-    margin-right:10px ;
-
-
+*
+{
+    margin:0;
 }
 
 
 
 
+.nav{
+    height: 3rem;
+    background-color:brown;
+    text-align: center;
+
+}
+.navigation{
+    padding-top: 2vh;
+    /* padding-left: 80vh; */
+    text-align: right;
+}
+
+.navigation a{
+    text-decoration: none;
+    color:white;
+    padding-left: 12vh;
+     
+}
+/*main section*/
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-[
+.one{
+    
+    background-color: blue;
+    color:white;
+    text-align: center;
+}
+.two{
+    
+    background-color:darkgreen;
+    color: white;
+    text-align: center;
+}
+.three{
+  
+    background-color:chocolate;
+    color:white;
+    text-align: center;
+}
+.four{
+    
+    background-color:chartreuse;
+    color:white;
+    text-align: center;
+}
+.five{
+     
+    background-color:darkorchid;
+    color:white;
+    text-align: center;
+}
+.five img{
+  
+    width:10vh;
+    border-radius: 50%;
+    border: 8px salmon;
+}
+.footer{
+    height: 3rem;
+    background-color: blue;
+}
