--- a/index.css
+++ b/index.css
@@ -4,13 +4,16 @@
 }
 body{
     font-family:Georgia, 'Times New Roman', Times, serif;
+    display:flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
     
 }
 /* navigation section */
 nav{
     display: flex;
     justify-content: space-between;
-     
+    width: 300%;
       background-color: bisque;
     align-items: center;
 }
@@ -98,7 +101,7 @@ font-weight:500;
       border-radius: 8px;
       font-size: 1rem;
       background-color: white;
-      margin-left: 90vh;
+     
     text-align: center;
     margin-bottom: 5vh;
    
@@ -171,6 +174,8 @@ font-family: Arial, Helvetica, sans-serif;
 /* why section */
 .page h1{
     color: navy;
+    text-align: center;
+    margin-bottom: 5vh;
 }
 
 .book{
@@ -180,7 +185,7 @@ font-family: Arial, Helvetica, sans-serif;
       border-radius: 8px;
       font-size: 14px;
       background-color: white;
-      margin-left: 20vh;
+      
     text-align: center;
     margin-bottom: 10vh;
 }
@@ -196,9 +201,90 @@ font-family: Arial, Helvetica, sans-serif;
       border-radius: 8px;
       font-size: 14px;
       background-color: white;
-      margin-left: 20vh;
+    
     text-align: center;
-    margin-bottom: 10vh;}
+    margin-bottom: 10vh;
+}
+.pre h3{
+  color: navy;
+  padding-top: 8vh;
+}
+  .pre  button#openFormBtn {
+  margin-top: 50px;
+  padding: 12px 24px;
+  font-size: 16px;
+  background-color: #0074d9;
+  color: white;
+  border: none;
+  border-radius: 6px;
+}
+
+. pre popup-form {
+  display: none;
+  position: fixed;
+  z-index: 10;
+  left: 0;
+  top: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.5);
+  justify-content: center;
+  align-items: center;
+}
+
+. pre form-content {
+  background-color: white;
+  padding: 20px 30px;
+  border-radius: 10px;
+  width: 90%;
+  max-width: 400px;
+  position: relative;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+}
+
+. pre close-btn {
+  position: absolute;
+  top: 10px;
+  right: 20px;
+  font-size: 22px;
+  color: #333;
+  cursor: pointer;
+}
+
+ .pre form {
+  display: flex;
+  flex-direction: column;
+}
+
+ .preform label {
+  text-align: left;
+  margin: 8px 0 4px;
+  font-weight: 500;
+}
+
+.pre form input {
+  padding: 10px;
+  border-radius: 6px;
+  border: 1px solid #ccc;
+  margin-bottom: 12px;
+}
+
+.pre form button {
+  background-color: #0074d9;
+  color: white;
+  padding: 10px;
+  border: none;
+  border-radius: 6px;
+  font-size: 16px;
+}
+
+/* Event */
+.Event h2{
+  text-align: center;
+  color: navy;
+  padding-bottom: 8vh;
+  padding-top: 8vh;
+}
     /* contact section */
 .contact{
   margin-top: 2vh;
@@ -207,6 +293,7 @@ font-family: Arial, Helvetica, sans-serif;
     text-align: center;
     padding-bottom: 3vh;
     padding-top: 3vh;
+    list-style: none;
   
 
 }
